# conspectium-max-bot

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.bot  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  git-branch-naming.md  nginx.conf  pyproject.toml  setup-docker.sh
.github/workflows/: telegram-notify.yml
alembic/: env.py
alembic/versions/: 20240606_0001_initial_schema.py  20240607_0002_add_conspect_markdown_variants.py  20240610_0003_add_profile_and_brief_variant.py  20251109_add_upload_to_audiosourcetype.py  2d46dfa1e369_add_user_banner_url.py  2f4c4f4ff2c5_merge_heads.py  540494a4b5d8_add_user_follow_table.py  5cb10acc1258_add_missing_user_fields.py  66c31e3f3ce0_add_share_tokens_and_tournament_support.py  90748c91a44e_add_user_description_and_avatar_upload.py  a42d0a5ba805_add_tournament_lobby_and_medals.py  add_max_user_id_to_user.py  b8c9d2e1f4a3_update_user_model_email_nickname_required.py  c5a27a7eba21_add_user_id_to_quizquestion_and_.py  f4cad2ac7691_make_user_nullable.py  f6a1d7de590f_rework_auth_and_user_isolation.py
app/: __init__.py  main.py
app/api/: api_v1.py  deps.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  audio.py  conspect.py  enums.py  generation.py  quiz.py  session.py  tournament.py  user.py  user_follow.py
app/schemas/: audio.py  conspect.py  job.py  profile.py  quiz.py  tournament.py  user.py
bot/: README.md  __init__.py  max.js  package.json
tests/: test_generation_service.py  test_quiz_models.py  test_quiz_schemas.py  test_storage_service.py
(+79 files in other folders)
